<resources>
    <string name="app_name">SMB</string>
    <string name="facebook_app_id">145551752718075</string>
    <string name="home">Home</string>
    <string name="magic_hours">Magic hours</string>
    <string name="rewards">Rewards</string>
    <string name="influencers">Influencers</string>
    <string name="shows">Shows</string>
    <string name="recommended_title">Recommended shows</string>
    <string name="followed_title">Followed by me</string>
    <string name="recommended_influencers_title">Recommended influencers</string>
    <string name="creators_title">Creators</string>
</resources>
